# badlib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: checks.yml
src/badlib/: __init__.py  badd_obj.py  quickid.py
src/malstore/: __init__.py  badd_obj.py
tests/: test_badd_obj.py  test_import.py  test_quickid.py
