[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "badlib"
version = "0.1.0"
description = "Python library for malware sample storage and compressed sample identification."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "BADLib contributors" }
]
keywords = [
    "malware",
    "archive",
    "compression",
    "storage",
    "forensics",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Archiving",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/bwhitn/badlib"
Issues = "https://github.com/bwhitn/badlib/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/badlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/badlib/badd_obj.py" = ["E501", "UP035", "UP045"]
"src/badlib/quickid.py" = ["E501", "F841", "UP006", "UP035"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "badlib.badd_obj",
    "badlib.quickid",
]
ignore_errors = true
